Added a math package

--- a/apps/hono-starter-main/package.json
+++ b/apps/hono-starter-main/package.json
@@ -5,6 +5,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@repo/math": "workspace:*",
     "hono": "^4.4.2"
   },
   "devDependencies": {
