Added an outputdirectory in vercel.json

--- a/apps/hono-starter-main/vercel.json
+++ b/apps/hono-starter-main/vercel.json
@@ -5,7 +5,6 @@
       "destination": "/api"
     }
   ],
-  "redirects": [
-    { "source": "/", "destination": "/api", "permanent": false }
-  ]
+  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }],
+  "outputDirectory": "./dist"
 }
