Updated some package.json configs to run start

--- a/apps/hono-starter-main/vercel.json
+++ b/apps/hono-starter-main/vercel.json
@@ -5,6 +5,5 @@
       "destination": "/api"
     }
   ],
-  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }],
-  "outputDirectory": "./dist"
+  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }]
 }
