Changed hono-starter-main to use typescript Added build script Changed vercel.json to have an outputDirectory

--- a/apps/hono-starter-main/tsconfig.json
+++ b/apps/hono-starter-main/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-  },
+    "outDir": "./dist"
+  }
 }
