--- a/apps/hono-starter-main/package.json
+++ b/apps/hono-starter-main/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/hono-starter-main",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "start": "vercel dev",
     "deploy": "vercel"
   },
