--- a/apps/hono-starter-main/vercel.json
+++ b/apps/hono-starter-main/vercel.json
@@ -5,5 +5,6 @@
       "destination": "/api"
     }
   ],
-  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }]
+  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }],
+  "outputDirectory": "./dist"
 }
